# CEX2REX-2.0

./: CREDITS.txt  Interlectural Property Notices.txt  LICENSE  LICENSE.md  README.md  app.xml  build.sh  make_appinfo.bat
app/: CMakeLists.txt  app.info  pstvConfig.txt  vitaConfig.txt
app/sce_sys/livearea/contents/: template.xml
app/src/: ctrl.c  ctrl.h  debugScreen.h  debugScreenFont.c  main.c  pup.c  pup.h
kernel/: CMakeLists.txt  exports.yml
kernel/src/: cex2rex_kern.h  main.c  power.h  spkg.c  spkg.h  sysroot.h
kmspico/: CMakeLists.txt  exports.yml
kmspico/src/: main.c
spoofer/: Makefile  README.md  exports.yml  mmu_dump.c
user/: CMakeLists.txt  exports.yml
user/src/: cex2rex_user.h  main.c
